--- a/templates/blocks/block--views-block--solr-search-content-block-1.html.twig
+++ b/templates/blocks/block--views-block--solr-search-content-block-1.html.twig
@@ -8,11 +8,11 @@
  */
 #}
 <div{{attributes.addClass('sacda-search-block','my-8')}}>
-	{% if label %}
+	{# {% if label %}
 		<h2 class="sacda-search-block__title text-2xl font-bold text-foreground mb-6 pb-3 border-b-2 border-primary">
 			{{ label }}
 		</h2>
-	{% endif %}
+	{% endif %} #}
 
 	{% block content %}
 		<div class="sacda-search-block__content">
