--- a/templates/node/node--collection.html.twig
+++ b/templates/node/node--collection.html.twig
@@ -10,7 +10,7 @@
 <article{{attributes.addClass('node-collection','flex','flex-col')}}>
 
 	{# 2. Main Content & Sidebar #}
-	<div class="collection-content container mx-auto px-4 md:px-24 py-8 md:py-12">
+	<div class="collection-content container mx-auto px-4 py-8 md:py-12">
 
 		<div
 			class="grid grid-cols-1 md:grid-cols-1 gap-12">
