--- a/templates/macros/hero.twig
+++ b/templates/macros/hero.twig
@@ -55,7 +55,7 @@
 		{% endif %}
 
 		{# Content #}
-		<div class="hero-content relative z-10 px-4 md:px-24 max-w-7xl mx-auto w-full">
+		<div class="hero-content relative z-10 px-4 max-w-7xl mx-auto w-full">
 			{% if opts.title %}
 				<h1 class="hero-title text-4xl md:text-5xl lg:text-6xl font-bold text-white mb-4">
 					{{ opts.title }}
@@ -90,7 +90,7 @@
 	{% set opts = defaults|merge(options) %}
 
 	<section class="hero-title-bar {{ opts.background_color }} py-12 md:py-16 {{ opts.class }}">
-		<div class="px-4 md:px-24 max-w-7xl mx-auto">
+		<div class="px-4 max-w-7xl mx-auto">
 			<h1 class="text-3xl md:text-4xl font-bold text-white">
 				{{ opts.title }}
 			</h1>
