--- a/templates/blocks/block--sacda-tabs.html.twig
+++ b/templates/blocks/block--sacda-tabs.html.twig
@@ -7,6 +7,6 @@
  * Styles defined in _system.css
  */
 #}
-<nav class="sacda-tabs-block py-4 px-4 mb-6" aria-label="{{ 'Tabs'|t }}">
+<nav class="sacda-tabs-block py-4 mb-6" aria-label="{{ 'Tabs'|t }}">
 	{{ content }}
 </nav>
