--- a/templates/views/views-view-fields--top-level-collections--page-1.html.twig
+++ b/templates/views/views-view-fields--top-level-collections--page-1.html.twig
@@ -7,25 +7,34 @@
  */
 #}
 {% set theme_path = '/' ~ active_theme_path() %}
+{% set default_image = theme_path ~ '/static/collections/default.jpg' %}
 
 {# Extract fields #}
 {% set image_field = fields.did_image.content|default(fields.field_image.content|default('')) %}
 {% set title_field = fields.title.content|default('') %}
 {% set description_field = fields.field_description.content|default('') %}
 
+{# Check if image field has an actual image #}
+{% set image_string = image_field|render|raw %}
+{% set has_image = '<img' in image_string %}
+
 {# Image Container #}
-<div class="collection__item__img">
-	{{ image_field|raw }}
+<div class="collection__item__img aspect-4/3 bg-muted overflow-hidden [&_a]:block [&_a]:w-full [&_a]:h-full [&_img]:w-full [&_img]:h-full [&_img]:object-cover">
+	{% if has_image %}
+		{{ image_field|raw }}
+	{% else %}
+		<img src="{{ default_image }}" alt="{{ title_field|striptags|trim }}" class="w-full h-full object-cover">
+	{% endif %}
 </div>
 
 {# Title Overlay (Orange Bar) #}
-<div class="collection__item__title">
+<div class="collection__item__title bg-primary text-white px-4 py-3 font-semibold">
 	{{ title_field|raw }}
 </div>
 
 {# Description (Visible on Mobile, Hidden on Desktop) #}
 {% if description_field|striptags|trim %}
-	<div class="collection__item__description">
+	<div class="collection__item__description text-sm text-muted-foreground mt-2 md:hidden">
 		<p>{{ description_field|striptags|trim }}</p>
 	</div>
 {% endif %}
