--- a/templates/views/views-view-fields--solr-search-content--block-1.html.twig
+++ b/templates/views/views-view-fields--solr-search-content--block-1.html.twig
@@ -19,25 +19,26 @@
 {% set image_string = image_content|render|raw %}
 {% set display_has_image = '<img' in image_string or 'img' in image_string %}
 
-{# Image Container #}
-<div class="aspect-square bg-muted overflow-hidden [&_a]:block [&_a]:w-full [&_a]:h-full [&_img]:w-full [&_img]:h-full [&_img]:object-contain [&_img]:object-center">
-	{% if display_has_image %}
-		{{ image_content|raw }}
-	{% else %}
-		<img src="{{ default_image }}" alt="{{ 'No image'|t }}" class="w-full h-full object-contain">
-	{% endif %}
-</div>
-
-{# Info section #}
-<div class="py-2.5">
-	<div class="text-sm leading-tight mb-1">
-		<a href="{{ fields.title.content|striptags|trim ? '#' : '#' }}" class="text-foreground no-underline hover:text-primary">
-			{{ title_field|raw }}
-		</a>
+{# Wrapper with group for hover effects #}
+<div class="group cursor-pointer">
+	{# Image Container #}
+	<div class="aspect-square bg-muted overflow-hidden [&_a]:block [&_a]:w-full [&_a]:h-full [&_img]:w-full [&_img]:h-full [&_img]:object-contain [&_img]:object-center [&_img]:transition-transform [&_img]:duration-300 group-hover:[&_img]:scale-105">
+		{% if display_has_image %}
+			{{ image_content|raw }}
+		{% else %}
+			<img src="{{ default_image }}" alt="{{ 'No image'|t }}" class="w-full h-full object-contain transition-transform duration-300 group-hover:scale-105">
+		{% endif %}
 	</div>
-	{% if member_of_field|striptags|trim %}
-		<div class="text-xs text-muted-foreground">
-			{{ member_of_field|striptags|trim }}
+
+	{# Info section #}
+	<div class="py-2.5">
+		<div class="text-sm leading-tight mb-1 [&_a]:text-foreground [&_a]:inline-block group-hover:[&_a]:underline group-hover:[&_a]:decoration-primary [&_a]:transition-colors">
+			{{ title_field|raw }}
 		</div>
-	{% endif %}
+		{% if member_of_field|striptags|trim %}
+			<div class="text-xs text-muted-foreground">
+				{{ member_of_field|striptags|trim }}
+			</div>
+		{% endif %}
+	</div>
 </div>
