--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,6 +7,7 @@
 @import "./_detail.css";
 @import "./_system.css";
 @import "./_search.css";
+@import "./_advanced-search.css";
 @import "./_collections.css";
 
 
