--- a/templates/page/page--front.html.twig
+++ b/templates/page/page--front.html.twig
@@ -38,7 +38,7 @@
 							<h2>SEARCH</h2>
 						</div>
 						<div class="w-full md:w-2/3">
-							<form action="/search" method="get" class="flex items-center pt-2 w-full">
+							<form action="https://sacda.ca/search" method="get" class="flex items-center pt-2 w-full">
 								{{ search.input({
 								id: 'frontSearchInput',
 								variant: 'hero',
@@ -57,8 +57,8 @@
 							</p>
 							<div class="flex flex-col md:flex-row gap-5 mt-10 md:mt-14">
 
-								{{ btn.link('About', '/about', { variant: 'outline', class: 'w-full md:w-auto' }) }}
-								{{ btn.link('Advanced Search', '/search/advanced', { variant: 'outline', class: 'w-full md:w-auto' }) }}
+								{{ btn.link('About', 'https://sacda.ca/about', { variant: 'outline', class: 'w-full md:w-auto' }) }}
+								{{ btn.link('Advanced Search', 'https://sacda.ca/search/advanced', { variant: 'outline', class: 'w-full md:w-auto' }) }}
 							</div>
 						</div>
 					</div>
@@ -86,9 +86,9 @@
 
 			<div class="home-exhibits">
 				{% set exhibits = [
-					{ title: 'Komagata Maru Exhibit', link: '/exhibits/komagata-maru', image: theme_path ~ '/static/homepage/Komogata-Maru-Exhibit_South-Asian-Canadian.jpg' },
-					{ title: 'Labour History Exhibit', link: '/exhibits/labour-history', image: theme_path ~ '/static/homepage/Labour-History-Exhibit_South-Asian-Canadian.jpg' },
-					{ title: 'The Vote Exhibit', link: '/exhibits/the-vote', image: theme_path ~ '/static/homepage/The-Vote-Exhibit_South-Asian-Canadian.jpg' }
+					{ title: 'Komagata Maru Exhibit', link: 'https://sacda.ca/exhibits/komagata-maru', image: theme_path ~ '/static/homepage/Komogata-Maru-Exhibit_South-Asian-Canadian.jpg' },
+					{ title: 'Labour History Exhibit', link: 'https://sacda.ca/exhibits/labour-history', image: theme_path ~ '/static/homepage/Labour-History-Exhibit_South-Asian-Canadian.jpg' },
+					{ title: 'The Vote Exhibit', link: 'https://sacda.ca/exhibits/the-vote', image: theme_path ~ '/static/homepage/The-Vote-Exhibit_South-Asian-Canadian.jpg' }
 				] %}
 
 				{% for exhibit in exhibits %}
@@ -112,10 +112,10 @@
 			</div>
 
 			{% set themes = [
-				{ title: 'Advocacy', link: '/themes/advocacy', image: theme_path ~ '/static/homepage/Advocacy-Theme_South-Asian-Canadian.jpg', colspan: 2, rowspan: 1 },
-				{ title: 'Arts and Culture', link: '/themes/arts-culture', image: theme_path ~ '/static/homepage/Arts-Culture_South-Asian-Canadian.jpg', colspan: 1, rowspan: 2 },
-				{ title: 'Migration', link: '/themes/migration', image: theme_path ~ '/static/homepage/Migration-theme_South-Asian-Canadian.jpg', colspan: 1, rowspan: 1 },
-				{ title: 'Family', link: '/themes/family', image: theme_path ~ '/static/homepage/Family_South-Asian-Canadian.jpg', colspan: 1, rowspan: 1 }
+				{ title: 'Advocacy', link: 'https://sacda.ca/themes/advocacy', image: theme_path ~ '/static/homepage/Advocacy-Theme_South-Asian-Canadian.jpg', colspan: 2, rowspan: 1 },
+				{ title: 'Arts and Culture', link: 'https://sacda.ca/themes/arts-culture', image: theme_path ~ '/static/homepage/Arts-Culture_South-Asian-Canadian.jpg', colspan: 1, rowspan: 2 },
+				{ title: 'Migration', link: 'https://sacda.ca/themes/migration', image: theme_path ~ '/static/homepage/Migration-theme_South-Asian-Canadian.jpg', colspan: 1, rowspan: 1 },
+				{ title: 'Family', link: 'https://sacda.ca/themes/family', image: theme_path ~ '/static/homepage/Family_South-Asian-Canadian.jpg', colspan: 1, rowspan: 1 }
 			] %}
 
 			<div class="hidden md:grid grid-cols-3 grid-rows-[25vw_25vw] gap-4">
@@ -159,9 +159,9 @@
 			</div>
 
 			{% set recent_items = [
-				{ title: 'Chandra Bodalia Collection', link: '/collections/chandra-bodalia', image: theme_path ~ '/static/homepage/Chandra-Bodalia-Collection_South-Asian-Canadian.jpg' },
-				{ title: 'Del Monte Collection', link: '/collections/del-monte', image: theme_path ~ '/static/homepage/delmonte.jpg' },
-				{ title: 'Joan Mayo Fonds', link: '/collections/joan-mayo', image: theme_path ~ '/static/homepage/joanmayofonds.jpg' }
+				{ title: 'Chandra Bodalia Collection', link: 'https://sacda.ca/collections/chandra-bodalia', image: theme_path ~ '/static/homepage/Chandra-Bodalia-Collection_South-Asian-Canadian.jpg' },
+				{ title: 'Del Monte Collection', link: 'https://sacda.ca/collections/del-monte', image: theme_path ~ '/static/homepage/delmonte.jpg' },
+				{ title: 'Joan Mayo Fonds', link: 'https://sacda.ca/collections/joan-mayo', image: theme_path ~ '/static/homepage/joanmayofonds.jpg' }
 			] %}
 
 			<div class="hidden md:grid grid-cols-3 gap-6 h-[25vw]">
@@ -198,7 +198,7 @@
 					Do you have access to materials and/or oral histories of significance you could contribute to our digital archives?
 				</p>
 				<div class="flex justify-center">
-					{{ btn.link('Contribute to SACDA', '/contribute', { variant: 'outline' }) }}
+					{{ btn.link('Contribute to SACDA', 'https://sacda.ca/contribute', { variant: 'outline' }) }}
 				</div>
 			</div>
 		</section>
