fix: smaller heading sizes

--- a/src/css/_base.css
+++ b/src/css/_base.css
@@ -50,26 +50,26 @@
 
   /* H1: 40px mobile, 60px @960px, uppercase, top margin 0 */
   h1 {
-    font-size: 40px !important;
-    text-transform: uppercase !important;
-    line-height: 1.2 !important;
+    font-size: 40px;
+    text-transform: uppercase;
+    line-height: 1.2;
   }
 
   @media (min-width: 960px) {
     h1 {
-      font-size: 60px !important;
+      font-size: 48px;
     }
   }
 
   /* H2: 30px mobile, 50px @1280px */
   h2 {
-    font-size: 30px !important;
-    line-height: 1.3 !important;
+    font-size: 30px;
+    line-height: 1.3;
   }
 
   @media (min-width: 1280px) {
     h2 {
-      font-size: 50px !important;
+      font-size: 32px;
     }
   }
 
